02-apigateway/02-deploy-gateway.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  creationTimestamp: "2022-05-07T02:55:47Z"
  generation: 4
  labels:
    kiali_wizard: request_routing
  name: lab-gateway
  namespace: apps
  resourceVersion: "20264"
  uid: 5b38cec7-672e-4fb6-8f66-b6eb13b9eb98
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
