02-apigateway/07-deploy-vs-keycloak.yml
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  generation: 5
  labels:
    kiali_wizard: request_routing
  name: vs-keycloak
  namespace: apps
spec:
  gateways:
  - lab-gateway
  hosts:
  - 'keycloak.keycloakns.svc.cluster.local'
  http:
    - route:
      - destination:
          host: keycloak.keycloakns.svc.cluster.local
